<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/main_button_container">

            <Button
                android:id="@+id/button_main_ctrl_vehicle"
                style="@style/main_button"
                android:background="@drawable/fish_3"
                android:text="@string/empty_str"
                android:hint="@string/main_ctrl_vehicle_hint"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_button_text"
                android:text="@string/main_ctrl_vehicle_title"
                android:hint="@string/main_ctrl_vehicle_hint"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout style="@style/main_button_container">

            <Button
                android:id="@+id/button_main_alarm_realtime"
                style="@style/main_button"
                android:background="@drawable/fish_2"
                android:text="@string/empty_str"
                android:hint="@string/main_alarm_realtime_hint"
                android:layout_height="120dp"
                android:layout_width="120dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_button_text"
                android:text="@string/main_alarm_realtime_title"
                android:hint="@string/main_alarm_realtime_hint"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout style="@style/main_button_container">

            <Button
                android:id="@+id/button_main_device_update_position"
                style="@style/main_button"
                android:background="@drawable/fish_1"
                android:text="@string/empty_str"
                android:hint="@string/main_device_update_position_hint"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_button_text"
                android:text="@string/main_device_update_position_title"
                android:hint="@string/main_device_update_position_hint"
                android:singleLine="true"
                android:layout_margin="5dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout style="@style/main_button_container">

            <Button
                android:id="@+id/button_main_vehicle_query"
                style="@style/main_button"
                android:background="@drawable/fish"
                android:text="@string/empty_str"
                android:hint="@string/main_vehicle_query_hint"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/main_button_text"
                android:text="@string/main_vehicle_query_title"
                android:hint="@string/main_vehicle_query_hint"
                android:gravity="center" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
